<resources>
    <string name="app_name">MyVpn</string>
    <string name="abc_action_bar_home_description">转到主屏幕</string>
    <string name="abc_action_bar_home_description_format">%1$s：%2$s</string>
    <string name="abc_action_bar_home_subtitle_description_format">%1$s - %2$s：%3$s</string>
    <string name="abc_action_bar_up_description">转到上一层级</string>
    <string name="abc_action_menu_overflow_description">更多选项</string>
    <string name="abc_action_mode_done">完成</string>
    <string name="abc_activity_chooser_view_see_all">查看全部</string>
    <string name="abc_activitychooserview_choose_application">选择应用</string>
    <string name="abc_capital_off">关闭</string>
    <string name="abc_capital_on">开启</string>
    <string name="abc_search_hint">搜索…</string>
    <string name="abc_searchview_description_clear">清除查询</string>
    <string name="abc_searchview_description_query">搜索查询</string>
    <string name="abc_searchview_description_search">搜索</string>
    <string name="abc_searchview_description_submit">提交查询</string>
    <string name="abc_searchview_description_voice">语音搜索</string>
    <string name="abc_shareactionprovider_share_with">分享方式</string>
    <string name="abc_shareactionprovider_share_with_application">通过%s分享</string>
    <string name="abc_toolbar_collapse_description">收起</string>
    <string name="search_menu_title">搜索</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="Dont_show_this_again">以后不再显示</string>
    <string name="Download_link_sent">已发送。</string>
    <string name="Email_Required">Email（必填）</string>
    <string name="GREEN_APP_INTRO">\"极致稳定，源自专业\"。</string>
    <string name="GREEN_APP_INTRO_SESSION_TITLE">"极致稳定，源自专业
        Green手机版"</string>
    <string name="GREEN_APP_INTRO_TITLE">Green手机版App</string>
    <string name="NEED_TO_RESTART">网络连接错误，需要重新启动</string>
    <string name="REFRESH_LINE">切换中…</string>
    <string name="STOPPING_SERVICE">正在停止服务</string>
    <string name="UPDATE_DIALOG_PROCESS_TITLE">开始下载更新文件…</string>
    <string name="VIP_LINES">vip专享线路，当前用户等级不支持</string>
    <string name="about">关于</string>
    <string name="about_us">关于我们</string>
    <string name="account_info">账户信息</string>
    <string name="account_ready">已经有Green账号了？</string>
    <string name="account_service">账户服务</string>
    <string name="action_save">保存</string>
    <string name="alert_title">紧急通知</string>
    <string name="alipay_result_fail">支付失败</string>
    <string name="alipay_result_unclear">支付结果确认中，请联系客服</string>
    <string name="all_accelerate_mode">已关闭（全局模式）</string>
    <string name="all_accelerated_switch">智能分流</string>
    <string name="app_explore_info_not_save">设置未保存？</string>
    <string name="app_name2">Green加速器</string>
    <string name="app_solo_info_not_save">温馨提示，分应用加速信息未保存</string>
    <string name="appreciate_for_rate">喜欢Green吗？</string>
    <string name="appreciate_for_rate_1">喜欢就去应用商店大声说出来！</string>
    <string name="appreciate_for_rate_2">期待您的好评！</string>
    <string name="area_line_all_err">Green通知：您当前网络到服务器线路不通，连接已经断开，请您手动切换区域后再次连接</string>
    <string name="auto_select">自动选择</string>
    <string name="bg_reconnecting">后台服务正在重新连接，请稍候</string>
    <string name="buy">购买</string>
    <string name="buy_tab_name">购买</string>
    <string name="buy_vip_err">购买vip出现异常，请联系客服</string>
    <string name="buy_vip_succeed">套餐购买成功，立即生效</string>
    <string name="change_email_succeed">修改邮箱成功</string>
    <string name="change_email_succeed_award">恭喜修改邮箱成功，获赠%d小时免费时长，每天签到还可以不断延长哦！</string>
    <string name="change_passwd">修改密码</string>
    <string name="change_passwd_succeed">密码修改成功</string>
    <string name="check_in_badly">运势不佳，再接再厉哦:(</string>
    <string name="check_in_intro">免费领取时长</string>
    <string name="check_in_left_time">距离下次签到还有：%d小时</string>
    <string name="check_in_luckly">运势冲天啊，赶紧去买彩票哦:-)</string>
    <string name="check_in_normally">再接再厉，大奖就在眼前了</string>
    <string name="check_in_sub_intro">签到即送，至少4小时</string>
    <string name="check_in_succeed">签到成功,获得%d积分</string>
    <string name="check_in_tips">恭喜获得 %d 积分</string>
    <string name="close">已关闭</string>
    <string name="comfirm">确定</string>
    <string name="connect_help_desk">联系客服</string>
    <string name="connect_tab_name">连接</string>
    <string name="connection_setting">连接设置</string>
    <string name="credit_reward">兑换规则: 点击「积分兑换」后,将根据用户当前积分,按照最多能兑换的方式来兑换</string>
    <string name="current_plan_name">当前套餐</string>
    <string name="current_region_auto">自动选择</string>
    <string name="days_ago">%d 天前</string>
    <string name="dialog_title_not_save">信息未保存</string>
    <string name="do_later">以后再说</string>
    <string name="do_next_time">下次再说</string>
    <string name="download_and_open">下载完成后点击打开</string>
    <string name="download_by_email">通过Email接收桌面版</string>
    <string name="download_by_email_action">发送桌面版</string>
    <string name="download_pc_edition_tips">提示：若您无法接收邮件，请直接前往 %s 下载</string>
    <string name="download_slient">开始下载更新文件…</string>
    <string name="edit_email">修改Email</string>
    <string name="email">Email</string>
    <string name="email_dont_exist">未填写</string>
    <string name="email_empty">email不能为空</string>
    <string name="email_updated">您的Email已綁定</string>
    <string name="empty_name_password">用户名或密码为空</string>
    <string name="empty_password">密码不能为空</string>
    <string name="enter_email">请提供您的Email</string>
    <string name="err_email_format">邮箱格式错误</string>
    <string name="err_msg_network_issue">网络状态异常…请稍后重试</string>
    <string name="err_msg_network_noconnect">网络未连接,请检查网络连接情况</string>
    <string name="err_msg_network_reconnect">Green通知: 当前网络状态不好，正在自动重连服务器，整个过程可能需要一定时间，请您耐心等候</string>
    <string name="err_service_fail">无法启动服务，请您稍后重试</string>
    <string name="err_user_network">Green通知：您当前网络不稳定，无法完成自动重连，连接已经断开，请检查网络情况</string>
    <string name="err_username_unnormal">用户状态异常，请联系客服</string>
    <string name="exchange_tips">"- 积分满 1000，可以兑换VIP套餐 7 天
        - 积分满 1800，可以兑换VIP套餐 14 天
        - 积分满 2500，可以兑换VIP套餐 21 天
        - 积分满 3000，可以兑换VIP套餐 30 天"</string>
    <string name="excharge_credit">现在兑换</string>
    <string name="expire_date_title_free">账号有效期至</string>
    <string name="expire_date_title_vip">VIP有效期至</string>
    <string name="explore">探索</string>
    <string name="explore_mode_on">探索模式开启！</string>
    <string name="faq_questions">常见问题</string>
    <string name="forget_passwd">忘记密码</string>
    <string name="forget_uname_or_password">忘记用户名或密码？</string>
    <string name="forgot_password">忘记密码</string>
    <string name="forgot_username">忘记用户名</string>
    <string name="forward_success">Green加速器已启动</string>
    <string name="get_start">开始</string>
    <string name="go_rate">好的</string>
    <string name="good_luck">运势冲天啊，赶紧去买彩票：）</string>
    <string name="grant_download_privilege">请您授权下载服务</string>
    <string name="green_pc">Green桌面版</string>
    <string name="green_title"><b>Green</b></string>
    <string name="green_working">正在为您加速</string>
    <string name="help_desk">客服</string>
    <string name="help_tab_name">帮助</string>
    <string name="ignore">不再提示</string>
    <string name="ignore_this_version">忽略此版更新</string>
    <string name="invalid_server">无效服务器地址,正在重新获取中…</string>
    <string name="invalid_username">非法用户名</string>
    <string name="later">知道了</string>
    <string name="login">登录</string>
    <string name="logo_intros">Powerful, and simple.</string>
    <string name="logout">退出</string>
    <string name="method_unsafe">加密方法可能不安全</string>
    <string name="need_help">联系客服</string>
    <string name="need_to_grant">请您给予授权，以启动加速服务</string>
    <string name="new_email">新的Email</string>
    <string name="new_password">新的密码</string>
    <string name="next_step">下一步</string>
    <string name="no_app_market">您的系统中没有安装应用市场~</string>
    <string name="no_register">快捷注册</string>
    <string name="not_install_wechat">未安装微信</string>
    <string name="not_rate_now">下次再说</string>
    <string name="not_save">不保存</string>
    <string name="not_support_soloapp">分应用加速功能需要安卓5.0以上系统才能支持</string>
    <string name="offline_device">设备下线</string>
    <string name="offline_device_succeed">设备成功下线</string>
    <string name="ok">好的</string>
    <string name="ok_go">好的，走起</string>
    <string name="ok_i_know">知道了</string>
    <string name="open">已开启</string>
    <string name="option_tab_name">选项</string>
    <string name="other">其他</string>
    <string name="oversea_accelerated_mode">已开启（推荐）</string>
    <string name="password">密码</string>
    <string name="password_the_same">新密码与旧密码相同</string>
    <string name="pay_by_alipay">支付宝</string>
    <string name="pay_by_paypal">PayPal</string>
    <string name="pay_by_website">网站支付</string>
    <string name="pay_by_weixin">微信支付</string>
    <string name="pay_way_subtitle">支付过程安全可靠，套餐立即生效</string>
    <string name="pay_way_title">选择支付方式（%s）</string>
    <string name="pay_wechat_fail">支付失败</string>
    <string name="pay_wechat_success">支付成功</string>
    <string name="payment_verify">支付结果确认中</string>
    <string name="please_wait">请稍候…</string>
    <string name="pls_agree_user_contract">请先阅读并同意产品使用和服务条款</string>
    <string name="pls_read_and_agree_contract">请先阅读并同意产品使用和服务条款</string>
    <string name="pro">专业</string>
    <string name="proxy_empty">服务器地址不存在</string>
    <string name="quick_register_succeed">注册成功，记得在「账户信息」中修改密码哦</string>
    <string name="quote_full_err">当前用户终端配额已满，请退出部分终端后再次尝试</string>
    <string name="ready_to_go">一切准备就绪！</string>
    <string name="reboot_required">出现故障,请您重新启动APP</string>
    <string name="receive">收下</string>
    <string name="recharge_credit">我要兑积分</string>
    <string name="recovering">初始化…请稍候</string>
    <string name="redeem_days">恭喜,成功兑换VIP套餐%d天</string>
    <string name="region_list">区域列表</string>
    <string name="region_lock">锁定区域</string>
    <string name="register">注册</string>
    <string name="register_return">返回</string>
    <string name="rescue_email_tip">获得积分前，需要先绑定您的Email，以后可随时通过Email找回账号，积分永不丢失</string>
    <string name="reverse">反选</string>
    <string name="revoke_vpn">服务授权被系统回收</string>
    <string name="save">保存并退出</string>
    <string name="save_and_quit">保存并生效</string>
    <string name="save_app_info">正在保存信息，请稍候</string>
    <string name="security_intros">"强烈建议您尽快填写您的邮箱^_^
        不仅可以找回密码，还能获得随机赠送的免费使用时间，不要错过哦~"</string>
    <string name="security_tips">免注册登录，如何找回密码？</string>
    <string name="send_by_email_succeed">已发送至%s</string>
    <string name="service_failed">线路故障,正在更新线路信息…请稍候</string>
    <string name="service_restarting">服务重启中</string>
    <string name="set_passwd">设置密码</string>
    <string name="set_passwd_tip">提示：如果您是免注册使用，请先设置密码。桌面版就能用同一账号登录了。</string>
    <string name="share_by_pengyou">朋友圈</string>
    <string name="share_by_qq">QQ</string>
    <string name="share_by_qzone">QQ空间</string>
    <string name="share_by_weixin">微信</string>
    <string name="share_invite_subtitle">若觉得这个APP还不错，请分享给您的朋友们</string>
    <string name="share_invite_title">好东西要分享</string>
    <string name="share_select_dialog_title">选择你喜欢的分享方式</string>
    <string name="share_task_succeed_tip">恭喜获得 %d 积分</string>
    <string name="share_task_succeed_tips2">运势冲天啊，赶紧去买彩票哦</string>
    <string name="share_task_tips">今日已签到，如果您喜欢这个APP，</string>
    <string name="share_task_tips1">请分享给朋友使用。</string>
    <string name="share_task_tips2">您将获得额外赠送的积分。</string>
    <string name="share_wechat_cancel">取消分享</string>
    <string name="share_wechat_complete">分享成功</string>
    <string name="share_wechat_fail">分享失败</string>
    <string name="to_share">分享</string>
    <string name="totally_agree">我已阅读并同意</string>
    <string name="user_email">邮箱</string>
    <string name="user_name">用户名</string>
    <string name="user_name_for_login">用户名 / Email</string>
    <string name="user_service_contract">产品使用和服务条款</string>
    <string name="website">访问官网</string>
    <string name="quick_toggle">Toggle</string>
    <string name="quick_switch">Switch</string>
    <string name="add_profile_methods_scan_qr_code">Scan QR code</string>
</resources>