<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              tools:context="com.vpn.Activity.ChangePasswordActivity">

    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/change_passwd"
            android:textSize="20.0sp"
            android:gravity="center"
    />

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30.0dp"
            android:layout_marginRight="30.0dp"
            android:layout_marginTop="40.0dp"
            android:orientation="vertical">

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/user_name"
                android:textSize="14.0sp" />

        <TextView
                android:id="@+id/user_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text=""
                android:textSize="16.0sp" />

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/new_password"
                android:layout_marginTop="10dp"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="14.0sp" />

        <EditText
                android:id="@+id/new_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10.0dp"
                android:background="#00000000"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textColorHint="@color/lightTextColor" />

        <Button
                android:id="@+id/save"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:background="@color/colorPrimaryDark"
                android:paddingBottom="10.0dp"
                android:paddingTop="10dp"
                android:text="@string/save"
                android:textSize="18sp" />

    </LinearLayout>

</LinearLayout>
