<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <TextView
            android:id="@+id/ContactCustomerService"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="280dp"
            android:layout_marginTop="10dp"
            android:text="@string/need_help"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="16sp" />

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="517dp"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="40dp"
            android:orientation="vertical">

        <ImageView
                android:id="@+id/logo"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="50dp"
                android:src="@drawable/green_logo_800_round" />

        <TextView
                android:id="@+id/textView1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:text="@string/user_name_for_login"
                android:textColor="@color/colorPrimaryDark" />

        <EditText
                android:id="@+id/account"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#00000000"
                android:hint="@string/user_name_for_login"
                android:inputType="text"
                android:paddingBottom="6dp"
                android:paddingTop="12dp"
                android:text=""
                android:textColor="@color/textColor"
                android:textColorHint="@color/grayTextColor"
                android:textSize="14.0sp" />

        <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="0dp"
                android:text="@string/password"
                android:textColor="@color/colorPrimaryDark" />

        <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#00000000"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:paddingBottom="6dp"
                android:paddingTop="12dp"
                android:text=""
                android:textColor="@color/textColor"
                android:textColorHint="@color/grayTextColor"
                android:textSize="14.0sp" />

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:orientation="horizontal">

            <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:background="#00000000" />

            <Button
                    android:id="@+id/forgot_username"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="0dp"
                    android:layout_weight="1"
                    android:background="#00000000"
                    android:text="@string/forgot_username"
                    android:textColor="@color/grayTextColor"
                    android:textSize="14.0sp" />

            <Button
                    android:id="@+id/forgot_password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="0dp"
                    android:layout_weight="1"
                    android:background="#00000000"
                    android:text="@string/forgot_password"
                    android:textColor="@color/grayTextColor"
                    android:textSize="14.0sp" />

        </LinearLayout>

        <Button
                android:id="@+id/login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="0dp"
                android:background="@color/colorPrimary"
                android:paddingBottom="15dp"
                android:paddingLeft="18dp"
                android:paddingRight="18dp"
                android:paddingTop="15dp"
                android:text="@string/login"
                android:textColor="@color/white"
                android:textSize="24.0sp" />

        <Button
                android:id="@+id/register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:background="#00000000"
                android:text="@string/register"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="18sp" />

    </LinearLayout>


    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

        <CheckBox
                android:id="@+id/checkBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="5dp"
                android:checked="true" />

        <TextView
                android:id="@+id/user_contract_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:gravity="center"
                android:text="@string/totally_agree"
                android:textColor="#ffd3d3d3"
                android:textSize="14.0sp" />

        <Button
                android:id="@+id/user_contract_link"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:background="#00000000"
                android:gravity="center"
                android:text="@string/user_service_contract"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="14.0sp" />

    </LinearLayout>
</LinearLayout>