<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.green.RegisterActivity">


    <ImageView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="80dp"
        android:src="@mipmap/ic_launcher_test" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:orientation="vertical"
        android:paddingBottom="20.0dip"
        android:paddingLeft="34.0dip"
        android:paddingRight="34.0dip">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/user_name"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/user_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#00000000"
            android:hint="@string/user_name"
            android:inputType="text"
            android:padding="12.0dip"
            android:textColor="@color/textColor"
            android:textColorHint="@color/grayTextColor"
            android:textSize="14.0sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/user_email"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/user_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#00000000"
            android:hint="@string/user_email"
            android:inputType="textEmailAddress"
            android:padding="12.0dip"
            android:textColor="@color/textColor"
            android:textColorHint="@color/grayTextColor"
            android:textSize="14.0sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/password"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#00000000"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="12.0dip"
            android:text=""
            android:textColor="@color/textColor"
            android:textColorHint="@color/grayTextColor"
            android:textSize="14.0sp" />

    </LinearLayout>

    <Button
        android:id="@+id/register_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:background="@color/colorPrimary"
        android:gravity="center"
        android:paddingBottom="10dp"
        android:paddingTop="10dp"
        android:text="@string/register"
        android:textColor="@color/white"
        android:textSize="24.0sp" />

    <Button
        android:id="@+id/back_link_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="#00000000"
        android:text="@string/register_return"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="18sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/checkBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:layout_marginLeft="40dp"
            android:checked="true"
            />

        <TextView
            android:id="@+id/user_contract_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:gravity="center"
            android:text="@string/totally_agree"
            android:textColor="#ffd3d3d3"
            android:textSize="14.0sp" />

        <Button
            android:id="@+id/user_contract_link"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:background="#00000000"
            android:gravity="center"
            android:text="@string/user_service_contract"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="14.0sp" />

    </LinearLayout>

</LinearLayout>
