<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@color/listviewSelectedTextColor"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:gravity="center_vertical"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:text="@string/account_service"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/AccountInfoemation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/select_background"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="34dp"
            android:layout_height="34dp"
            android:layout_marginLeft="10dp"
            android:src="@drawable/share" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="10dp"
            android:text="@string/account_info"
            android:textSize="16sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/VisitWeb"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@drawable/select_background"
        android:layout_marginTop="10dp"
        >

        <ImageView
            android:layout_width="34dp"
            android:layout_height="34dp"
            android:src="@drawable/share"
            android:layout_marginLeft="10dp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/website"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="10dp"
            android:textSize="16sp"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="20dp"
        android:background="@color/listviewSelectedTextColor"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/other"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:layout_marginLeft="15dp"
            android:textSize="18sp"
            android:gravity="center_vertical"
            />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/about"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/select_background"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="34dp"
            android:layout_height="34dp"
            android:layout_marginLeft="10dp"
            android:src="@drawable/share" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="10dp"
            android:text="@string/about"
            android:textSize="16sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/to_share"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@drawable/select_background"
        android:layout_marginTop="10dp"
        >

        <ImageView
            android:layout_width="34dp"
            android:layout_height="34dp"
            android:src="@drawable/share"
            android:layout_marginLeft="10dp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/to_share"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="10dp"
            android:textSize="16sp"
            />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/logout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/select_background"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="34dp"
            android:layout_height="34dp"
            android:layout_marginLeft="10dp"
            android:src="@drawable/share" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="10dp"
            android:text="@string/logout"
            android:textSize="16sp" />
    </LinearLayout>
</LinearLayout>